--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -685,6 +685,8 @@
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "KeyStore đã được tải xuống tự động. Nếu cần thiết, bạn có thể tải JSON bằng tay hoặc sao chép khóa riêng.",
   "Total": "Tổng",
   "Third registration": "Đăng ký thứ ba",
+  "Verified": "Đã xác thực",
+  "Channel": "Kênh",
   "I. New User Creation Reward": "I. Thưởng cho việc tạo tài khoản người dùng mới",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Sau khi hoàn thành xác thực người dùng mới, sẽ nhận được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Thưởng cho việc giới thiệu",
