--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -146,7 +146,7 @@
   "Custom": "自定义",
   "Customize Ollama models for a specific purpose": "为特定目的定制 Ollama 模型",
   "Dark": "深色",
-  "Dashboard": "仪表盘；控制面板",
+  "Dashboard": "仪表盘",
   "Database": "数据库",
   "December": "十二月",
   "Default": "默认",
@@ -192,7 +192,7 @@
   "Edit Doc": "编辑文档",
   "Edit User": "编辑用户",
   "email": "电子邮件",
-  "Email": "电子邮件（大写形式，可能在特定语境如标题、强调正式等情况使用）",
+  "Email": "电子邮件",
   "Embedding Model": "嵌入模型",
   "Embedding Model Engine": "嵌入模型引擎",
   "Embedding model set to {{embedding_model}}":" 嵌入模型设置为 {{embedding_model}}",
@@ -684,6 +684,8 @@
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "密钥库已自动下载。如有必要，你可以手动下载 JSON 或复制私钥。",
   "Total": "总数",
   "Third registration": "第三方注册",
+  "Verified": "认证结果",
+  "Channel": "渠道",
   "I. New User Creation Reward": "I. 新用户创建奖励",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "完成新用户认证后，可获得一个<span style='color: rgba(184, 142, 86, 1);'>1000</span>个 DGC 的奖励。",
   "II. Referral Reward": "II. 推荐奖励",
