更新统计数据

--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -684,7 +684,7 @@
   "Your friend not complete the KYC verification.": "",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "",
   "Total": "",
-  "Third registration": "",
+  "Channel Distribution": "",
   "Verified": "",
   "Channel": "",
   "I. New User Creation Reward": "",
