--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -684,7 +684,7 @@
   "Your friend not complete the KYC verification.": "Tu amigo no ha completado la verificación KYC.",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "El KeyStore se ha descargado automáticamente. Si es necesario, puede descargar JSON manualmente o copiar la clave privada.",
   "Total": "Total",
-  "Third registration": "Registro de terceros",
+  "Channel Distribution": "Distribución de canales",
   "Verified": "Verificado",
   "Channel": "Canal",
   "I. New User Creation Reward": "I. Recompensa por la Creación de un Nuevo Usuario",
