--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -683,7 +683,7 @@
   "Your friend not complete the KYC verification.": "Votre ami n'a pas terminé la vérification KYC.",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "Le KeyStore a été téléchargé automatiquement. Si nécessaire, vous pouvez télécharger le JSON manuellement ou copier la clé privée.",
   "Total": "Total",
-  "Third registration": "Enregistrement tiers",
+  "Channel Distribution": "Distribution de canaux",
   "Verified": "Vérifié",
   "Channel": "Canal",
   "I. New User Creation Reward": "I. Récompense pour la création d'un nouvel utilisateur",
