--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -684,7 +684,7 @@
   "Your friend not complete the KYC verification.": "Teman Anda belum menyelesaikan verifikasi KYC.",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "KeyStore telah diunduh secara otomatis. Jika perlu, Anda dapat mengunduh JSON secara manual atau menyalin kunci privat.",
   "Total": "Total",
-  "Third registration": "Pendaftaran Tersirat",
+  "Channel Distribution": "Distribusi Saluran",
   "Verified": "Terverifikasi",
   "Channel": "Saluran",
   "I. New User Creation Reward": "I. Hadiah Pembuatan Pengguna Baru",
