--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -684,7 +684,7 @@
   "Your friend not complete the KYC verification.": "Seu amigo não completou a verificação KYC.",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "O KeyStore foi baixado automaticamente. Se necessário, você pode baixar o JSON manualmente ou copiar a chave privada.",
   "Total": "Total",
-  "Third registration": "Registro de terceiros",
+  "Channel Distribution": "Distribuição de canais",
   "Verified": "Verificado",
   "Channel": "Canal",
   "I. New User Creation Reward": "I. Recompensa por Criação de Novo Usuário",
