--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -683,7 +683,7 @@
   "Your friend not complete the KYC verification.": "เพื่อนของคุณยังไม่เสร็จสิ้นการตรวจสอบ KYC.",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "KeyStore ได้ถูกดาวน์โหลดโดยอัตโนมัติ. หากจำเป็น คุณสามารถดาวน์โหลด JSON แบบมืออาชีพหรือคัดลอกคีย์ส่วนตัวได้.",
   "Total": "ทั้งหมด",
-  "Third registration": "การสมัครสมาชิกของบุคคลที่สาม",
+  "Channel Distribution": "การกระจายช่อง",
   "Verified": "ตรวจสอบแล้ว",
   "Channel": "ช่อง",
   "I. New User Creation Reward": "I. ค่าตอบแทนสำหรับการสร้างผู้ใช้ใหม่",
