--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -684,7 +684,7 @@
   "Your friend not complete the KYC verification.": "Bạn của bạn chưa hoàn thành xác thực KYC.",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "KeyStore đã được tải xuống tự động. Nếu cần thiết, bạn có thể tải JSON bằng tay hoặc sao chép khóa riêng.",
   "Total": "Tổng",
-  "Third registration": "Đăng ký thứ ba",
+  "Channel Distribution": "Phân bổ kênh",
   "Verified": "Đã xác thực",
   "Channel": "Kênh",
   "I. New User Creation Reward": "I. Thưởng cho việc tạo tài khoản người dùng mới",
