--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -684,7 +684,7 @@
   "Your friend not complete the KYC verification.": "Dein Freund hat die KYC-Verifizierung nicht abgeschlossen.",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "Das KeyStore wurde automatisch heruntergeladen. Falls erforderlich, können Sie JSON manuell herunterladen oder den privaten Schlüssel kopieren.",
   "Total": "Gesamt",
-  "Third registration": "Drittanbieter-Registrierung",
+  "Channel Distribution": "Kanalverteilung",
   "Verified": "Verifiziert",
   "Channel": "Kanal",
   "I. New User Creation Reward": "I. Belohnung für die Erstellung eines neuen Benutzers",
