--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -683,7 +683,7 @@
   "Your friend not complete the KYC verification.": "Ваш друг не завершил проверку KYC.",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "KeyStore был автоматически загружен. Если необходимо, вы можете скачать JSON вручную или скопировать приватный ключ.",
   "Total": "Общее",
-  "Third registration": "Регистрация третьей стороны",
+  "Channel Distribution": "Распределение каналов",
   "Verified": "Верифицирован",
   "Channel": "Канал",
   "I. New User Creation Reward": "I. Премия за создание нового пользователя",
