--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -146,7 +146,7 @@
   "Custom": "自定义",
   "Customize Ollama models for a specific purpose": "为特定目的定制 Ollama 模型",
   "Dark": "深色",
-  "Dashboard": "仪表盘",
+  "Dashboard": "数据分析",
   "Database": "数据库",
   "December": "十二月",
   "Default": "默认",
@@ -683,7 +683,7 @@
   "Your friend not complete the KYC verification.": "你的朋友没有完成 KYC 验证。",
   "The KeyStore has been downloaded automatically. If necessary, you can download JSON manually or copy the private key": "密钥库已自动下载。如有必要，你可以手动下载 JSON 或复制私钥。",
   "Total": "总数",
-  "Third registration": "第三方注册",
+  "Channel Distribution": "渠道分布",
   "Verified": "认证结果",
   "Channel": "渠道",
   "I. New User Creation Reward": "I. 新用户创建奖励",
