更新统计页面信息

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -687,6 +687,19 @@
   "Channel Distribution": "Kanalverteilung",
   "Verified": "Verifiziert",
   "Channel": "Kanal",
+  "User Total": "Benutzer gesamt",
+  "Wallet User Total": "Wallet-Benutzer gesamt",
+  "Channel User Total": "Kanal-Benutzer gesamt",
+  "VIP User Total": "VIP-Benutzer gesamt",
+  "KYC User Total": "KYC-Benutzer gesamt",
+  "Recent 15 Days User Data Distribution": "Letzte 15 Tage Benutzerdatenverteilung",
+  "VIP Distribution": "VIP-Verteilung",
+  "VIP Total": "VIP gesamt",
+  "Expired Total": "Abgelaufen gesamt",
+  "Renew Total": "Aktualisiert gesamt",
+  "User Report": "Benutzerbericht",
+  "ROLE": "Rolle",
+  "KYC": "KYC",
   "I. New User Creation Reward": "I. Belohnung für die Erstellung eines neuen Benutzers",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Nach der Vervollständigung der Authentifizierung eines neuen Benutzers erhält man eine <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC-Belohnung.",
   "II. Referral Reward": "II. Empfehlungsbelohnung",
