--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -687,6 +687,19 @@
   "Channel Distribution": "",
   "Verified": "",
   "Channel": "",
+  "User Total": "",
+  "Wallet User Total": "",
+  "Channel User Total": "",
+  "VIP User Total": "",
+  "KYC User Total": "",
+  "Recent 15 Days User Data Distribution": "",
+  "VIP Distribution": "",
+  "VIP Total": "",
+  "Expired Total": "",
+  "Renew Total": "",
+  "User Report": "",
+  "ROLE": "",
+  "KYC": "",
   "I. New User Creation Reward": "",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "",
   "II. Referral Reward": "",
