--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -687,6 +687,19 @@
   "Channel Distribution": "Distribusi Saluran",
   "Verified": "Terverifikasi",
   "Channel": "Saluran",
+  "User Total": "Jumlah Pengguna",
+  "Wallet User Total": "Jumlah Pengguna Dompet",
+  "Channel User Total": "Jumlah Pengguna Saluran",
+  "VIP User Total": "Jumlah Pengguna VIP",
+  "KYC User Total": "Jumlah Pengguna KYC",
+  "Recent 15 Days User Data Distribution": "Distribusi Data Pengguna dalam 15 Hari Terakhir",
+  "VIP Distribution": "Distribusi VIP",
+  "VIP Total": "Total VIP",
+  "Expired Total": "Total Kadaluarsa",
+  "Renew Total": "Total Perbarui",
+  "User Report": "Laporan Pengguna",
+  "ROLE": "Peran",
+  "KYC": "KYC",
   "I. New User Creation Reward": "I. Hadiah Pembuatan Pengguna Baru",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Setelah menyelesaikan autentikasi pengguna baru, terima hadiah sebesar <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Hadiah Rujukan",
