--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -687,6 +687,19 @@
   "Channel Distribution": "채널 분포",
   "Verified": "인증됨",
   "Channel": "채널",
+  "User Total": "사용자 총계",
+  "Wallet User Total": "지갑 사용자 총계",
+  "Channel User Total": "채널 사용자 총계",
+  "VIP User Total": "VIP 사용자 총계",
+  "KYC User Total": "KYC 사용자 총계",
+  "Recent 15 Days User Data Distribution": "최근 15일간 사용자 데이터 분포",
+  "VIP Distribution": "VIP 분포",
+  "VIP Total": "VIP 총계",
+  "Expired Total": "만료 총계",
+  "Renew Total": "갱신 총계",
+  "User Report": "사용자 보고서",
+  "ROLE": "역할",
+  "KYC": "KYC",
   "I. New User Creation Reward": "I. 신규 사용자 생성 보상",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "신규 사용자 인증을 완료한 후, <span style='color: rgba(184, 142, 86, 1);'>1000</span>개의 DGC 보상을 받습니다.",
   "II. Referral Reward": "II. 추천 보상",
