--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -687,6 +687,19 @@
   "Channel Distribution": "Distribuição de canais",
   "Verified": "Verificado",
   "Channel": "Canal",
+  "User Total": "Usuário total",
+  "Wallet User Total": "Usuário de carteira total",
+  "Channel User Total": "Usuário de canal total",
+  "VIP User Total": "Usuário VIP total",
+  "KYC User Total": "Usuário KYC total",
+  "Recent 15 Days User Data Distribution": "Distribuição de dados de usuários nos últimos 15 dias",
+  "VIP Distribution": "Distribuição de VIP",
+  "VIP Total": "Total de VIP",
+  "Expired Total": "Total expirado",
+  "Renew Total": "Total renovado",
+  "User Report": "Relatório de Usuário",
+  "ROLE": "Papel",
+  "KYC": "KYC",
   "I. New User Creation Reward": "I. Recompensa por Criação de Novo Usuário",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Após completar a autenticação do novo usuário, receba uma recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Recompensa por Indicação",
