--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -686,6 +686,19 @@
   "Channel Distribution": "渠道分布",
   "Verified": "认证结果",
   "Channel": "渠道",
+  "User Total": "用户总数",
+  "Wallet User Total": "钱包用户数",
+  "Channel User Total": "渠道用户数",
+  "VIP User Total": "VIP用户数",
+  "KYC User Total": "KYC用户数",
+  "Recent 15 Days User Data Distribution": "近15天用户数据分布",
+  "VIP Distribution": "VIP分布",
+  "VIP Total": "VIP总数",
+  "Expired Total": "已过期总数",
+  "Renew Total": "续费总数",
+  "User Report": "用户报表",
+  "ROLE": "角色",
+  "KYC": "KYC",
   "I. New User Creation Reward": "I. 新用户创建奖励",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "完成新用户认证后，可获得一个<span style='color: rgba(184, 142, 86, 1);'>1000</span>个 DGC 的奖励。",
   "II. Referral Reward": "II. 推荐奖励",
