--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -687,6 +687,19 @@
   "Channel Distribution": "Distribución de canales",
   "Verified": "Verificado",
   "Channel": "Canal",
+  "User Total": "Usuario total",
+  "Wallet User Total": "Usuario de billetera total",
+  "Channel User Total": "Usuario de canal total",
+  "VIP User Total": "Usuario VIP total",
+  "KYC User Total": "Usuario KYC total",
+  "Recent 15 Days User Data Distribution": "Distribución de datos de usuarios en los últimos 15 días",
+  "VIP Distribution": "Distribución de VIP",
+  "VIP Total": "VIP total",
+  "Expired Total": "Total expirado",
+  "Renew Total": "Total renovado",
+  "User Report": "Informe de Usuario",
+  "ROLE": "Rol",
+  "KYC": "KYC",
   "I. New User Creation Reward": "I. Recompensa por la Creación de un Nuevo Usuario",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Después de completar la autenticación del nuevo usuario, recibe una recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Recompensa por Recomendación",
