--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -686,6 +686,19 @@
   "Channel Distribution": "Distribution de canaux",
   "Verified": "Vérifié",
   "Channel": "Canal",
+  "User Total": "Utilisateur total",
+  "Wallet User Total": "Utilisateur de portefeuille total",
+  "Channel User Total": "Utilisateur de canal total",
+  "VIP User Total": "Utilisateur VIP total",
+  "KYC User Total": "Utilisateur KYC total",
+  "Recent 15 Days User Data Distribution": "Distribution des données d'utilisateurs sur les 15 derniers jours",
+  "VIP Distribution": "Distribution de VIP",
+  "VIP Total": "VIP total",
+  "Expired Total": "Total expiré",
+  "Renew Total": "Total renouvelé",
+  "User Report": "Rapport Utilisateur",
+  "ROLE": "Rôle",
+  "KYC": "KYC",
   "I. New User Creation Reward": "I. Récompense pour la création d'un nouvel utilisateur",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Après avoir effectué l'authentification du nouvel utilisateur, recevez une récompense de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Récompense pour la recommandation",
