--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -687,6 +687,19 @@
   "Channel Distribution": "チャンネル分布",
   "Verified": "確認済み",
   "Channel": "チャンネル",
+  "User Total": "ユーザー総数",
+  "Wallet User Total": "ウォレットユーザー総数",
+  "Channel User Total": "チャンネルユーザー総数",
+  "VIP User Total": "VIPユーザー総数",
+  "KYC User Total": "KYCユーザー総数",
+  "Recent 15 Days User Data Distribution": "最近15日間のユーザーデータ分布",
+  "VIP Distribution": "VIP分布",
+  "VIP Total": "VIP総数",
+  "Expired Total": "期限切れ総数",
+  "Renew Total": "更新総数",
+  "User Report": "ユーザー報告書",
+  "ROLE": "役割",
+  "KYC": "KYC",
   "I. New User Creation Reward": "I. 新規ユーザー作成報酬",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": " 新規ユーザー認証を完了した後、<span style='color: rgba(184, 142, 86, 1);'>1000</span>個の DGC 報酬を受け取ります。",
   "II. Referral Reward": "II. 紹介報酬",
