--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -686,6 +686,19 @@
   "Channel Distribution": "การกระจายช่อง",
   "Verified": "ตรวจสอบแล้ว",
   "Channel": "ช่อง",
+  "User Total": "ผู้ใช้ทั้งหมด",
+  "Wallet User Total": "ผู้ใช้กระเป๋าเงินทั้งหมด",
+  "Channel User Total": "ผู้ใช้ช่องทั้งหมด",
+  "VIP User Total": "ผู้ใช้ VIP ทั้งหมด",
+  "KYC User Total": "ผู้ใช้ KYC ทั้งหมด",
+  "Recent 15 Days User Data Distribution": "การกระจายข้อมูลผู้ใช้ในช่วง 15 วันที่ผ่านมา",
+  "VIP Distribution": "การกระจาย VIP",
+  "VIP Total": "ผู้ใช้ VIP ทั้งหมด",
+  "Expired Total": "ผู้ใช้ที่หมดอายุทั้งหมด",
+  "Renew Total": "ผู้ใช้ที่อัปเกรดทั้งหมด",
+  "User Report": "รายงานผู้ใช้",
+  "ROLE": "สถานะ",
+  "KYC": "KYC",
   "I. New User Creation Reward": "I. ค่าตอบแทนสำหรับการสร้างผู้ใช้ใหม่",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "หลังจากเสร็จสิ้นการยืนยันผู้ใช้ใหม่แล้ว รับค่าตอบแทน <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC",
   "II. Referral Reward": "II. ค่าตอบแทนสำหรับการแนะนำ",
