--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -687,6 +687,19 @@
   "Channel Distribution": "Kanal Dağılımı",
   "Verified": "Doğrulanmış",
   "Channel": "Kanal",
+  "User Total": "Kullanıcı Toplamı",
+  "Wallet User Total": "Cüzdan Kullanıcı Toplamı",
+  "Channel User Total": "Kanal Kullanıcı Toplamı",
+  "VIP User Total": "VIP Kullanıcı Toplamı",
+  "KYC User Total": "KYC Kullanıcı Toplamı",
+  "Recent 15 Days User Data Distribution": "Son 15 Gün İçinde Kullanıcı Veri Dağılımı",
+  "VIP Distribution": "VIP Dağılımı",
+  "VIP Total": "VIP Toplamı",
+  "Expired Total": "Süre Doldu Toplamı",
+  "Renew Total": "Yenileme Toplamı",
+  "User Report": "Kullanıcı Raporu",
+  "ROLE":"Rol",
+  "KYC": "KYC",
   "I. New User Creation Reward": "I. Yeni Kullanıcı Oluşturma Ödülü",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Yeni kullanıcı doğrulamasını tamamladıktan sonra, <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC ödülü alırsınız.",
   "II. Referral Reward": "II. Tavsiye Ödülü",
