--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -687,6 +687,19 @@
   "Channel Distribution": "Phân bổ kênh",
   "Verified": "Đã xác thực",
   "Channel": "Kênh",
+  "User Total": "Tổng số người dùng",
+  "Wallet User Total": "Tổng số người dùng ví",
+  "Channel User Total": "Tổng số người dùng kênh",
+  "VIP User Total": "Tổng số người dùng VIP",
+  "KYC User Total": "Tổng số người dùng KYC",
+  "Recent 15 Days User Data Distribution": "Phân bổ dữ liệu người dùng trong 15 ngày qua",
+  "VIP Distribution": "Phân bổ VIP",
+  "VIP Total": "Tổng VIP",
+  "Expired Total": "Tổng hết hạn",
+  "Renew Total": "Tổng cập nhật",
+  "User Report": "Báo cáo Người dùng",
+  "ROLE": "VAI TRÒ",
+  "KYC": "KYC",
   "I. New User Creation Reward": "I. Thưởng cho việc tạo tài khoản người dùng mới",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Sau khi hoàn thành xác thực người dùng mới, sẽ nhận được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Thưởng cho việc giới thiệu",
