更新 奖励 代码

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -700,6 +700,24 @@
   "User Report": "Benutzerbericht",
   "ROLE": "Rolle",
   "KYC": "KYC",
+  "Follow Twitter": "Twitter folgen",
+  "Follow TG Group": "TG-Gruppe folgen",
+  "Enter Your Twitter Account": "Geben Sie Ihre Twitter-Kontoein",
+  "Following": "Folgen",
+  "Follow": "Folgen",
+  "Checking": "Überprüfung läuft",
+  "Check": "Überprüfen",
+  "Data Warning": "Datenwarnung",
+  "Registration Rewards": "Registrierungsbelohnungen",
+  "Sync Data": "Daten synchronisieren",
+  "Total Of Rewards": "Gesamtzahl der Belohnungen",
+  "Should Be Issued": "Soll ausgegeben werden",
+  "Actually Issued": "Tatsächlich ausgegeben",
+  "Total rewards for KYC-authenticated users": "Gesamtbelohnungen für KYC-verifizierte Benutzer",
+  "Total rewards actually for KYC-authenticated users.": "Tatsächliche Gesamtbelohnungen für KYC-verifizierte Benutzer",
+  "Completion Rate": "Abschlussquote",
+  "Invite Rewards": "Einladungsbelohnungen",
+  "There is no data that can be synchronized.": "Es gibt keine Daten, die synchronisiert werden können.",
   "I. New User Creation Reward": "I. Belohnung für die Erstellung eines neuen Benutzers",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Nach der Vervollständigung der Authentifizierung eines neuen Benutzers erhält man eine <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC-Belohnung.",
   "II. Referral Reward": "II. Empfehlungsbelohnung",
