--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -700,6 +700,24 @@
   "User Report": "",
   "ROLE": "",
   "KYC": "",
+  "Follow Twitter": "",
+  "Follow TG Group": "",
+  "Enter Your Twitter Account": "",
+  "Following": "",
+  "Follow": "",
+  "Checking": "",
+  "Check": "",
+  "Data Warning": "",
+  "Registration Rewards": "",
+  "Sync Data": "",
+  "Total Of Rewards": "",
+  "Should Be Issued": "",
+  "Actually Issued": "",
+  "Total rewards for KYC-authenticated users": "",
+  "Total rewards actually for KYC-authenticated users.": "",
+  "Completion Rate": "",
+  "Invite Rewards": "",
+  "There is no data that can be synchronized.": "",
   "I. New User Creation Reward": "",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "",
   "II. Referral Reward": "",
