--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -700,6 +700,24 @@
   "User Report": "ユーザー報告書",
   "ROLE": "役割",
   "KYC": "KYC",
+  "Follow Twitter": "Twitter をフォロー",
+  "Follow TG Group": "TG グループをフォロー",
+  "Enter Your Twitter Account": "Twitter アカウントを入力",
+  "Following": "フォロー中",
+  "Follow": "フォロー",
+  "Checking": "確認中",
+  "Check": "確認",
+  "Data Warning": "データけいこく",
+  "Registration Rewards": "登録報酬",
+  "Sync Data": "データ同期",
+  "Total Of Rewards": "報酬の総数",
+  "Should Be Issued": "発行すべきです",
+  "Actually Issued": "実際に発行された",
+  "Total rewards for KYC-authenticated users": "KYC 認証済みユーザー向けの報酬総数",
+  "Total rewards actually for KYC-authenticated users.": "KYC 認証済みユーザー向けの実際の報酬総数",
+  "Completion Rate": "完了率",
+  "Invite Rewards": "招待報酬",
+  "There is no data that can be synchronized.": "同期できるデータはありません。",
   "I. New User Creation Reward": "I. 新規ユーザー作成報酬",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": " 新規ユーザー認証を完了した後、<span style='color: rgba(184, 142, 86, 1);'>1000</span>個の DGC 報酬を受け取ります。",
   "II. Referral Reward": "II. 紹介報酬",
