--- a/src/lib/i18n/locales/th-TH/translation.json
+++ b/src/lib/i18n/locales/th-TH/translation.json
@@ -699,6 +699,24 @@
   "User Report": "รายงานผู้ใช้",
   "ROLE": "สถานะ",
   "KYC": "KYC",
+  "Follow Twitter": "ติดตาม Twitter",
+  "Follow TG Group": "ติดตาม TG กลุ่ม",
+  "Enter Your Twitter Account": "กรอกชื่อผู้ใช้ Twitter",
+  "Following": "ติดตาม",
+  "Follow": "ติดตาม",
+  "Checking": "ตรวจสอบ",
+  "Check": "ตรวจสอบ",
+  "Data Warning": "การเตือนข้อมูล",
+  "Registration Rewards": "รางวัลสำหรับการลงทะเบียน",
+  "Sync Data": "การสั่งซิงค์ข้อมูล",
+  "Total Of Rewards": "จำนวนรางวัลทั้งหมด",
+  "Should Be Issued": "ควรจะออก",
+  "Actually Issued": "ที่ออกจริง",
+  "Total rewards for KYC-authenticated users": "รางวัลทั้งหมดสำหรับผู้ใช้ที่ได้รับการยืนยันจาก KYC",
+  "Total rewards actually for KYC-authenticated users.": "รางวัลทั้งหมดจริงสำหรับผู้ใช้ที่ได้รับการยืนยันจาก KYC",
+  "Completion Rate": "อัตราการสำเร็จ",
+  "Invite Rewards": "รางวัลสำหรับการเชิญ",
+  "There is no data that can be synchronized.": "ไม่มีข้อมูลที่สามารถสั่งซิงค์ได้",
   "I. New User Creation Reward": "I. ค่าตอบแทนสำหรับการสร้างผู้ใช้ใหม่",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "หลังจากเสร็จสิ้นการยืนยันผู้ใช้ใหม่แล้ว รับค่าตอบแทน <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC",
   "II. Referral Reward": "II. ค่าตอบแทนสำหรับการแนะนำ",
