--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -700,6 +700,24 @@
   "User Report": "사용자 보고서",
   "ROLE": "역할",
   "KYC": "KYC",
+  "Follow Twitter": "트위터 팔로우",
+  "Follow TG Group": "TG 그룹 팔로우",
+  "Enter Your Twitter Account": "트위터 계정 입력",
+  "Following": "팔로우 중",
+  "Follow": "팔로우",
+  "Checking": "확인 중",
+  "Check": "확인",
+  "Data Warning": "데이터 경고",
+  "Registration Rewards": "회원가입 보상",
+  "Sync Data": "데이터 동기화",
+  "Total Of Rewards": "보상의 총 수",
+  "Should Be Issued": "발행되어야 합니다",
+  "Actually Issued": "실제로 발행된",
+  "Total rewards for KYC-authenticated users": "KYC 인증된 사용자를 위한 보상의 총 수",
+  "Total rewards actually for KYC-authenticated users.": "KYC 인증된 사용자를 위한 실제 보상의 총 수",
+  "Completion Rate": "완료율",
+  "Invite Rewards": "초대 보상",
+  "There is no data that can be synchronized.": "동기화할 수 있는 데이터가 없습니다.",
   "I. New User Creation Reward": "I. 신규 사용자 생성 보상",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "신규 사용자 인증을 완료한 후, <span style='color: rgba(184, 142, 86, 1);'>1000</span>개의 DGC 보상을 받습니다.",
   "II. Referral Reward": "II. 추천 보상",
