--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -700,6 +700,15 @@
   "User Report": "Báo cáo Người dùng",
   "ROLE": "VAI TRÒ",
   "KYC": "KYC",
+  "Follow Twitter": "Theo dõi Twitter",
+  "Follow TG Group": "Theo dõi TG Nhóm",
+  "Enter Your Twitter Account": "Nhập tài khoản Twitter của bạn",
+  "Following": "Đang theo dõi",
+  "Follow": "Theo dõi",
+  "Checking": "Đang kiểm tra",
+  "Check": "Kiểm tra",
+  "Data Warning": "Cảnh báo dữ liệu",
+  "There is no data that can be synchronized.": "Không có dữ liệu nào có thể được đồng bộ.",
   "I. New User Creation Reward": "I. Thưởng cho việc tạo tài khoản người dùng mới",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Sau khi hoàn thành xác thực người dùng mới, sẽ nhận được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Thưởng cho việc giới thiệu",
