--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -718,6 +718,7 @@
   "Completion Rate": "",
   "Invite Rewards": "",
   "There is no data that can be synchronized.": "",
+  "The synchronous request was sent successfully.": "",
   "I. New User Creation Reward": "",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "",
   "II. Referral Reward": "",
