--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -718,6 +718,7 @@
   "Completion Rate": "Tasa de finalización",
   "Invite Rewards": "Recompensas por invitación",
   "There is no data that can be synchronized.": "No hay datos que se puedan sincronizar.",
+  "The synchronous request was sent successfully.": "La solicitud síncrona se envió con éxito.",
   "I. New User Creation Reward": "I. Recompensa por la Creación de un Nuevo Usuario",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Después de completar la autenticación del nuevo usuario, recibe una recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Recompensa por Recomendación",
