--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -718,6 +718,7 @@
   "Completion Rate": "Tingkat Penyelesaian",
   "Invite Rewards": "Hadiah Undangan",
   "There is no data that can be synchronized.": "Tidak ada data yang dapat disinkronisasi.",
+  "The synchronous request was sent successfully.": "Permintaan sinkron telah dikirimkan dengan sukses.",
   "I. New User Creation Reward": "I. Hadiah Pembuatan Pengguna Baru",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Setelah menyelesaikan autentikasi pengguna baru, terima hadiah sebesar <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Hadiah Rujukan",
