--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -718,6 +718,7 @@
   "Completion Rate": "완료율",
   "Invite Rewards": "초대 보상",
   "There is no data that can be synchronized.": "동기화할 수 있는 데이터가 없습니다.",
+  "The synchronous request was sent successfully.": "동기 요청이 성공적으로 전송되었습니다.",
   "I. New User Creation Reward": "I. 신규 사용자 생성 보상",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "신규 사용자 인증을 완료한 후, <span style='color: rgba(184, 142, 86, 1);'>1000</span>개의 DGC 보상을 받습니다.",
   "II. Referral Reward": "II. 추천 보상",
