--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -718,6 +718,7 @@
   "Completion Rate": "Taxa de conclusão",
   "Invite Rewards": "Recompensas de convite",
   "There is no data that can be synchronized.": "Não há dados que possam ser sincronizados.",
+  "The synchronous request was sent successfully.": "A solicitação síncrona foi enviada com sucesso.",
   "I. New User Creation Reward": "I. Recompensa por Criação de Novo Usuário",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Após completar a autenticação do novo usuário, receba uma recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Recompensa por Indicação",
