更新 提示 语 文字显示

--- a/src/lib/i18n/locales/de-DE/translation.json
+++ b/src/lib/i18n/locales/de-DE/translation.json
@@ -719,6 +719,12 @@
   "Invite Rewards": "Einladungsbelohnungen",
   "There is no data that can be synchronized.": "Es gibt keine Daten, die synchronisiert werden können.",
   "The synchronous request was sent successfully.": "Die synchrone Anfrage wurde erfolgreich gesendet.",
+  "Please enter a valid email address.": "Bitte geben Sie eine gültige E-Mail-Adresse ein.",
+  "Please enter the verification code.": "Bitte geben Sie den Verifizierungscode ein.",
+  "The verification code record does not exist": "Das Verifizierungscoderecord existiert nicht",
+  "The verification code has expired": "Der Verifizierungscode ist abgelaufen",
+  "The verification code has been verified successfully": "Der Verifizierungscode wurde erfolgreich verifiziert",
+  "The verification code is invalid": "Der Verifizierungscode ist ungültig",
   "I. New User Creation Reward": "I. Belohnung für die Erstellung eines neuen Benutzers",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Nach der Vervollständigung der Authentifizierung eines neuen Benutzers erhält man eine <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC-Belohnung.",
   "II. Referral Reward": "II. Empfehlungsbelohnung",
