--- a/src/lib/i18n/locales/en-US/translation.json
+++ b/src/lib/i18n/locales/en-US/translation.json
@@ -719,6 +719,12 @@
   "Invite Rewards": "",
   "There is no data that can be synchronized.": "",
   "The synchronous request was sent successfully.": "",
+  "Please enter a valid email address.": "",
+  "Please enter the verification code.": "",
+  "The verification code record does not exist": "",
+  "The verification code has expired": "",
+  "The verification code has been verified successfully": "",
+  "The verification code is invalid": "",
   "I. New User Creation Reward": "",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "",
   "II. Referral Reward": "",
