--- a/src/lib/i18n/locales/es-ES/translation.json
+++ b/src/lib/i18n/locales/es-ES/translation.json
@@ -719,6 +719,12 @@
   "Invite Rewards": "Recompensas por invitación",
   "There is no data that can be synchronized.": "No hay datos que se puedan sincronizar.",
   "The synchronous request was sent successfully.": "La solicitud síncrona se envió con éxito.",
+  "Please enter a valid email address.": "Por favor, introduzca una dirección de correo electrónico válida.",
+  "Please enter the verification code.": "Por favor, introduzca el código de verificación.",
+  "The verification code record does not exist": "El registro del código de verificación no existe",
+  "The verification code has expired": "El código de verificación ha expirado",
+  "The verification code has been verified successfully": "El código de verificación ha sido verificado con éxito",
+  "The verification code is invalid": "El código de verificación es inválido",
   "I. New User Creation Reward": "I. Recompensa por la Creación de un Nuevo Usuario",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Después de completar la autenticación del nuevo usuario, recibe una recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Recompensa por Recomendación",
