--- a/src/lib/i18n/locales/fr-FR/translation.json
+++ b/src/lib/i18n/locales/fr-FR/translation.json
@@ -718,6 +718,12 @@
   "Invite Rewards": "Récompenses d'invitation",
   "There is no data that can be synchronized.": "Il n'y a pas de données qui puissent être synchronisées.",
   "The synchronous request was sent successfully.": "La requête synchrone a été envoyée avec succès.",
+  "Please enter a valid email address.": "Veuillez saisir une adresse e-mail valide.",
+  "Please enter the verification code.": "Veuillez saisir le code de vérification.",
+  "The verification code record does not exist": "L'enregistrement du code de vérification n'existe pas",
+  "The verification code has expired": "Le code de vérification a expiré",
+  "The verification code has been verified successfully": "Le code de vérification a été vérifié avec succès",
+  "The verification code is invalid": "Le code de vérification est invalide",
   "I. New User Creation Reward": "I. Récompense pour la création d'un nouvel utilisateur",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Après avoir effectué l'authentification du nouvel utilisateur, recevez une récompense de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Récompense pour la recommandation",
