--- a/src/lib/i18n/locales/id-ID/translation.json
+++ b/src/lib/i18n/locales/id-ID/translation.json
@@ -719,6 +719,12 @@
   "Invite Rewards": "Hadiah Undangan",
   "There is no data that can be synchronized.": "Tidak ada data yang dapat disinkronisasi.",
   "The synchronous request was sent successfully.": "Permintaan sinkron telah dikirimkan dengan sukses.",
+  "Please enter a valid email address.": "Silakan masukkan alamat email yang valid.",
+  "Please enter the verification code.": "Silakan masukkan kode verifikasi.",
+  "The verification code record does not exist": "Catatan kode verifikasi tidak ada",
+  "The verification code has expired": "Kode verifikasi telah kedaluwarsa",
+  "The verification code has been verified successfully": "Kode verifikasi telah diverifikasi dengan sukses",
+  "The verification code is invalid": "Kode verifikasi tidak valid",
   "I. New User Creation Reward": "I. Hadiah Pembuatan Pengguna Baru",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Setelah menyelesaikan autentikasi pengguna baru, terima hadiah sebesar <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Hadiah Rujukan",
