--- a/src/lib/i18n/locales/ja-JP/translation.json
+++ b/src/lib/i18n/locales/ja-JP/translation.json
@@ -719,6 +719,12 @@
   "Invite Rewards": "招待報酬",
   "There is no data that can be synchronized.": "同期できるデータはありません。",
   "The synchronous request was sent successfully.": "同期リクエストは正常に送信されました。",
+  "Please enter a valid email address.": "有効なメールアドレスを入力してください。",
+  "Please enter the verification code.": "認証コードを入力してください。",
+  "The verification code record does not exist": "認証コードの記録が存在しません",
+  "The verification code has expired": "認証コードは期限切れです",
+  "The verification code has been verified successfully": "認証コードが正常に検証されました",
+  "The verification code is invalid": "認証コードは無効です",
   "I. New User Creation Reward": "I. 新規ユーザー作成報酬",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": " 新規ユーザー認証を完了した後、<span style='color: rgba(184, 142, 86, 1);'>1000</span>個の DGC 報酬を受け取ります。",
   "II. Referral Reward": "II. 紹介報酬",
