--- a/src/lib/i18n/locales/pt-PT/translation.json
+++ b/src/lib/i18n/locales/pt-PT/translation.json
@@ -719,6 +719,12 @@
   "Invite Rewards": "Recompensas de convite",
   "There is no data that can be synchronized.": "Não há dados que possam ser sincronizados.",
   "The synchronous request was sent successfully.": "A solicitação síncrona foi enviada com sucesso.",
+  "Please enter a valid email address.": "Por favor, insira um endereço de e-mail válido.",
+  "Please enter the verification code.": "Por favor, insira o código de verificação.",
+  "The verification code record does not exist": "O registro do código de verificação não existe.",
+  "The verification code has expired": "O código de verificação expirou.",
+  "The verification code has been verified successfully": "O código de verificação foi verificado com sucesso.",
+  "The verification code is invalid": "O código de verificação é inválido.",
   "I. New User Creation Reward": "I. Recompensa por Criação de Novo Usuário",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Após completar a autenticação do novo usuário, receba uma recompensa de <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Recompensa por Indicação",
