--- a/src/lib/i18n/locales/tr-TR/translation.json
+++ b/src/lib/i18n/locales/tr-TR/translation.json
@@ -719,6 +719,12 @@
   "Invite Rewards": "Davet Ödülleri",
   "There is no data that can be synchronized.": "Synchronize edilebilecek veri yok.",
   "The synchronous request was sent successfully.": "Senkron istek başarıyla gönderildi.",
+  "Please enter a valid email address.": "Lütfen geçerli bir e-posta adresi girin.",
+  "Please enter the verification code.": "Lütfen doğrulama kodunu girin.",
+  "The verification code record does not exist": "Doğrulama kodu kaydı yok.",
+  "The verification code has expired": "Doğrulama kodu sona erdi.",
+  "The verification code has been verified successfully": "Doğrulama kodu başarıyla doğrulandı.",
+  "The verification code is invalid": "Doğrulama kodu geçersizdir.",
   "I. New User Creation Reward": "I. Yeni Kullanıcı Oluşturma Ödülü",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Yeni kullanıcı doğrulamasını tamamladıktan sonra, <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC ödülü alırsınız.",
   "II. Referral Reward": "II. Tavsiye Ödülü",
