--- a/src/lib/i18n/locales/zh-CN/translation.json
+++ b/src/lib/i18n/locales/zh-CN/translation.json
@@ -718,6 +718,12 @@
   "Invite Rewards": "邀请奖励",
   "There is no data that can be synchronized.": "没有可同步的数据。",
   "The synchronous request was sent successfully.": "同步请求已成功发送。",
+  "Please enter a valid email address.": "请输入有效的电子邮箱地址。",
+  "Please enter the verification code.": "请输入验证码。",
+  "The verification code record does not exist": "验证码记录不存在",
+  "The verification code has expired": "验证码已过期",
+  "The verification code has been verified successfully": "验证码验证成功",
+  "The verification code is invalid": "验证码无效",
   "I. New User Creation Reward": "I. 新用户创建奖励",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "完成新用户认证后，可获得一个<span style='color: rgba(184, 142, 86, 1);'>1000</span>个 DGC 的奖励。",
   "II. Referral Reward": "II. 推荐奖励",
