--- a/src/lib/i18n/locales/ko-KR/translation.json
+++ b/src/lib/i18n/locales/ko-KR/translation.json
@@ -719,6 +719,12 @@
   "Invite Rewards": "초대 보상",
   "There is no data that can be synchronized.": "동기화할 수 있는 데이터가 없습니다.",
   "The synchronous request was sent successfully.": "동기 요청이 성공적으로 전송되었습니다.",
+  "Please enter a valid email address.": "유효한 이메일 주소를 입력해주세요.",
+  "Please enter the verification code.": "인증 코드를 입력해주세요.",
+  "The verification code record does not exist": "인증 코드 기록이 존재하지 않습니다.",
+  "The verification code has expired": "인증 코드가 만료되었습니다.",
+  "The verification code has been verified successfully": "인증 코드가 성공적으로 검증되었습니다.",
+  "The verification code is invalid": "인증 코드가 유효하지 않습니다.",
   "I. New User Creation Reward": "I. 신규 사용자 생성 보상",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "신규 사용자 인증을 완료한 후, <span style='color: rgba(184, 142, 86, 1);'>1000</span>개의 DGC 보상을 받습니다.",
   "II. Referral Reward": "II. 추천 보상",
