--- a/src/lib/i18n/locales/ru-RU/translation.json
+++ b/src/lib/i18n/locales/ru-RU/translation.json
@@ -718,6 +718,12 @@
   "Invite Rewards": "Награды за приглашение",
   "There is no data that can be synchronized.": "Нет данных, которые можно было бы синхронизировать.",
   "The synchronous request was sent successfully.": "Синхронный запрос был успешно отправлен.",
+  "Please enter a valid email address.": "Пожалуйста, введите действительный адрес электронной почты.",
+  "Please enter the verification code.": "Пожалуйста, введите код верификации.",
+  "The verification code record does not exist": "Запись кода верификации не существует.",
+  "The verification code has expired": "Код верификации истёк.",
+  "The verification code has been verified successfully": "Код верификации был успешно проверен.",
+  "The verification code is invalid": "Код верификации недействителен.",
   "I. New User Creation Reward": "I. Премия за создание нового пользователя",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "После завершения аутентификации нового пользователя получите премию в <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Премия за рекомендацию",
