--- a/src/lib/i18n/locales/vi-VN/translation.json
+++ b/src/lib/i18n/locales/vi-VN/translation.json
@@ -710,6 +710,12 @@
   "Data Warning": "Cảnh báo dữ liệu",
   "There is no data that can be synchronized.": "Không có dữ liệu nào có thể được đồng bộ.",
   "The synchronous request was sent successfully.": "Yêu cầu đồng bộ đã được gửi thành công.",
+  "Please enter a valid email address.": "Vui lòng nhập địa chỉ email hợp lệ.",
+  "Please enter the verification code.": "Vui lòng nhập mã xác thực.",
+  "The verification code record does not exist": "Không có bản ghi mã xác thực.",
+  "The verification code has expired": "Mã xác thực đã hết hạn.",
+  "The verification code has been verified successfully": "Mã xác thực đã được xác thực thành công.",
+  "The verification code is invalid": "Mã xác thực không hợp lệ.",
   "I. New User Creation Reward": "I. Thưởng cho việc tạo tài khoản người dùng mới",
   "After completing new user authentication, receive a <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC reward.": "Sau khi hoàn thành xác thực người dùng mới, sẽ nhận được phần thưởng <span style='color: rgba(184, 142, 86, 1);'>1000</span> DGC.",
   "II. Referral Reward": "II. Thưởng cho việc giới thiệu",
